# benqprojector.py

./: MANIFEST.in  README.md  pyproject.toml  quirks.md
.github/workflows/: python-publish.yml
benqprojector/: __init__.py  __main__.py  benqclasses.py  benqconnection.py  benqexamine.py  benqprojector.py  config.py  task_helper.py
benqprojector/configs/: all.json  ht4550i.json  minimal.json  ms521pts537.json  mw519.json  th585.json  tk800m.json  w1100.json  w1110.json  w1140.json  w4000i.json  w4100i.json  w6000l.json  x3000i.json
test/: testBenQProjector.py  testBenQProjectorDetectCommands.py  testBenQProjectorMenu.py  testBenQProjectorParseResponses.py  testBenQProjectorVolume.py
tests/: __init__.py  testBenQProjector.py  testBenQProjectorDetectCommands.py  testBenQProjectorDetectModes.py  testBenQProjectorErrors.py  testBenQProjectorMenu.py  testBenQProjectorParseResponses.py  testBenQProjectorSerial.py  testBenQProjectorTelnet.py  testBenQProjectorVolume.py  testBenQSerialConnection.py  testBenQTelnetConnection.py
